--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -9,17 +9,15 @@ logback:
   loglevel: INFO
   app.loglevel: DEBUG
   
-github.download.directory: ${OPENSHIFT_DATA_DIR}/releases
-github.users.vars.path: ${HOME}/.env/user_vars
 
 spring:
     profiles:
         active: prod
     datasource:
         driverClassName: org.postgresql.Driver        
-        url: jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/${OPENSHIFT_APP_NAME}
-        username: ${OPENSHIFT_POSTGRESQL_DB_USERNAME}
-        password: ${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
+        url: jdbc:postgresql://${POSTGRESQL_DB_HOST}:${POSTGRESQL_DB_PORT}/${POSTGRESQL_DB_NAME}
+        username: ${POSTGRESQL_DB_USERNAME}
+        password: ${POSTGRESQL_DB_PASSWORD}
         test-on-borrow: true
         test-on-return: true
         test-while-idle: true
@@ -61,4 +59,4 @@ mail:
     username: ${SENDGRID_USERNAME}
     password: ${SENDGRID_PASSWORD}
     protocol: sendgrid
-    from: no-reply@localhost.fr
+    from: no-reply@never-back-down.fr
