--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: trusty
 cache:
   directories:
     - $HOME/.m2
-	- temp
+    - temp
 
 before_install:
 - export APP_VERSION=`mvn org.apache.maven.plugins:maven-help-plugin:2.1.1:evaluate
@@ -22,15 +22,15 @@ before_deploy:
   - git config --global user.name "Travis CI"
   - export GIT_TAG=$APP_VERSION-$TRAVIS_BUILD_NUMBER
   - git tag $GIT_TAG -a -m "Generated tag from TravisCI for $GIT_TAG"
-  - git push -q https://$GITHUBTOKEN@github.com/lgangloff/spring-boot-angular2-starter --tags
+  - git push -q https://$GITHUBTOKEN@github.com/lgangloff/never-back-down --tags
 
 deploy:
   provider: releases
   skip_cleanup: true
   api_key: $GITHUBTOKEN
-  file: target/spring-boot-angular2-starter-$GIT_TAG.jar
+  file: target/never-back-down-$GIT_TAG.jar
   on:
-    repo: lgangloff/spring-boot-angular2-starter
+    repo: lgangloff/never-back-down
     tags: false
     branch: master
     
