file ok i18n ok website ok template ok

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -35,10 +35,12 @@ spring:
         hibernate:
             ddl-auto: none
             naming-strategy: org.hibernate.cfg.EJB3NamingStrategy
+            default_schema: public
         properties:
             hibernate.cache.use_second_level_cache: false
             hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: true
+            hibernate.id.new_generator_mappings: false
 #            hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
     messages: 
         cache-seconds: 1
