--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
 									<goal>npm</goal>
 								</goals>
 								<configuration>
-									<arguments>run build -prod --base-href /app</arguments>
+									<arguments>run build -prod</arguments>
 								</configuration>
 							</execution>
 						</executions>
