--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -58,4 +58,4 @@ async:
     queueCapacity: 10000
             
 
-email.sendgrid.api.key: ${SENDGRID_API_KEY}
+mail.sendgrid.api.key: ${SENDGRID_API_KEY}
